--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url(reset.css);
 @import url(custom_reset.css);
 @import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great&display=swap');
